--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,3 +1,1 @@
-<label for="name">Name: </label>
-<input type="text" name="tasks[name]" id="name"
-       value="<%= tasks[:id] %>">
+<%= render 'form' %>
