--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,7 @@
 
 <br><br>
-<form action="/tasks" method="post">
+<%= render 'form' %>
+<!-- <form action="/tasks" method="post">
   <label for="name">Name: </label>
   <input type="text" name="task[name]" id="name">
 
@@ -9,5 +10,5 @@
 
   <input type="submit">
 </form>
-
+ -->
 
